--- a/charity.html
+++ b/charity.html
@@ -1,36 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="charity.css" rel="stylesheet" type="text/css">
-    
-    <script src="charity.js"></script>
-
-            <title>Rappel Conso</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Horoscope astrologique </title>
+  <script src="charity.js"></script>
+  <link href="charity.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Rappel Conso</h1>
+   <div id="wrapper">
+     <div id="image" src="" alt=""></div>   
+    <div id="signeAstro"></div>
+    <div id="button"></div>
+   </div>
 
-    <div id="wrapper">
-        
-        <h3>Cours d'Arts-Martiaux</h3>
-      <div id="image-wrapper">
-        <img id="image" src="img.charity/karate.png" alt="">
-      </div> 
-
-      <span id="lieux">81, boulevard de Port Royal, "codePostal": "75013", "BP ou Lieudit commune: Paris, pays: France</span>
-
-
-     <!-- <div id="header">
-        <div id="name">
-      </div>-->
-        <div id="button"></div>
-        <!--<div class="box"></div><-->
-    </div> 
-
-   
+   <div id="astrologie">
+   <form action="" method="get">
+    <label for="search">Rechercher :</label>
+    <input type="text" id="search" name="astrologie" placeholder="Entrez votre signe astrologique">
+    <button id="submit"> Submit</button>
+  </form> 
+  </div>
 
 </body>
 </html>
