--- a/charity.html
+++ b/charity.html
@@ -6,20 +6,23 @@
   <title>Horoscope astrologique </title>
   <script src="charity.js"></script>
   <link href="charity.css" rel="stylesheet">
+  <link rel="icon" href="astrologie.jpeg">
 </head>
+
 <body>
+  
    <div id="wrapper">
      <div id="image" src="" alt=""></div>   
-    <div id="signeAstro"></div>
-    <div id="button"></div>
+     <div id="signeAstro"></div>
+     <div id="button"></div>
    </div>
 
-   <div id="astrologie">
+  <div class="astrologie">
    <form action="" method="get">
     <label for="search">Rechercher :</label>
     <input type="text" id="search" name="astrologie" placeholder="Entrez votre signe astrologique">
     <button id="submit"> Submit</button>
-  </form> 
+   </form> 
   </div>
 
 </body>
