--- a/charity.html
+++ b/charity.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h3>Horoscope</h3>
-    <input placeholder="Entrez votre signe astrologique" type="text" id="sign" maxlength="12">
-    <button id="getHoroscopeButton">horoscope quotidien</button>
-    <button id="getHoroscopeSemaineButton">horoscope hebdomadaire</button>
-    <div id="horoscopeResult"></div>
+        <input placeholder="Entrez votre signe astrologique" type="text" id="sign" maxlength="12">
+      <div id="wrapper" >
+        <button id="getHoroscopeButton"  >horoscope quotidien</button>
+        <button id="getHoroscopeSemaineButton"  >horoscope hebdomadaire</button>
+     <div id="horoscopeResult"></div>
+      </div>
     <script src="script.js"></script>
 </body>
 </html>
