recup du nouveau css

--- a/charity.html
+++ b/charity.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
-    
+    <script src="charity.js"></script>
+
     <title>Horoscope</title>
 </head>
 <body>
@@ -23,9 +24,9 @@
   <div class="astrologie">
     <input placeholder="Entrez votre signe astrologique" type="text" id="sign" maxlength="12">
     <button id="getHoroscopeButton" class="quotidien">horoscope quotidien</button>
-    <button id="getHoroscopeSemaineButton" class="hebdomadaire">horoscope hebdomadaire</button>
+    <button id="getHoroscopeSemaineButton" class="hebdomadairegit push">horoscope hebdomadaire</button>
     <div id="horoscopeResult"></div>
-    <script src="script.js"></script>
+    
   </div> 
 
 </body>
