--- a/charity.html
+++ b/charity.html
@@ -11,14 +11,21 @@
     <title>Horoscope</title>
 </head>
 <body>
-    <h3>Horoscope</h3>
+  <div class="content">    
+    <h1>Relias</h1>
+    <p>Ton nouveau horoscope hebdomadaire.<br>Selectionnes ton signe astrologique et decouvres ton horoscope </p>
+</div>
+<div class="image">
+            <img src="pngegg.png">
+        </div>
+<div class="wrapper" >
         <input placeholder="Entrez votre signe astrologique" type="text" id="sign" maxlength="12">
-      <div id="wrapper" >
-        <button id="getHoroscopeButton"  >horoscope quotidien</button>
-        <button id="getHoroscopeSemaineButton"  >horoscope hebdomadaire</button>
-     <div id="horoscopeResult"></div>
+        <button id="getHoroscopeButton" class="quotidien" >Horoscope quotidien</button>
+        <button id="getHoroscopeSemaineButton" class="hebdomadaire" >Horoscope hebdomadaire</button>
+</div>     
+        <div id="horoscopeResult"></div>
       </div>
-    <script src="script.js"></script>
+    <script src="charity.js"></script>
   </div> 
 
 </body>
