--- a/charity.html
+++ b/charity.html
@@ -7,28 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ephesis&display=swap" rel="stylesheet">
-    <script src="charity.js"></script>
 
+    
     <title>Horoscope</title>
 </head>
+
 <body>
-<<<<<<< HEAD
-  <header>
-    <nav>
-      <a href="#horoscope jour">Horoscope quotidien</a>
-      <a href="#horoscope">Horoscope hebdomadaire</a>
-    </nav>
-  </header>
-
-    <h1>Horoscope</h1>
-
-  <div class="astrologie">
-    <input placeholder="Entrez votre signe astrologique" type="text" id="sign" maxlength="12">
-    <button id="getHoroscopeButton" class="quotidien">horoscope quotidien</button>
-    <button id="getHoroscopeSemaineButton" class="hebdomadairegit push">horoscope hebdomadaire</button>
-    <div id="horoscopeResult"></div>
-    
-=======
   <div class="content">    
     <h1>Relias</h1>
     <p>Ton nouveau horoscope hebdomadaire.<br>Selectionnes ton signe astrologique et decouvres ton horoscope </p>
@@ -41,11 +25,11 @@
         <button id="getHoroscopeButton" class="quotidien" >Horoscope quotidien</button>
         <button id="getHoroscopeSemaineButton" class="hebdomadaire" >Horoscope hebdomadaire</button>
 </div>     
+      <div class="conteneur">
         <div id="horoscopeResult"></div>
       </div>
     <script src="charity.js"></script>
->>>>>>> d9491d3c0708a27ef4f91adf0b97a7956d84d0d1
-  </div> 
+  
 
 </body>
 </html>
