--- a/charity.html
+++ b/charity.html
@@ -19,14 +19,28 @@
             <img src="pngegg.png">
         </div>
 <div class="wrapper" >
-        <input placeholder="Entrez votre signe astrologique" type="text" id="sign" maxlength="12">
+        <input placeholder="Votre signe..." type="text" id="sign" maxlength="12">
         <button id="getHoroscopeButton" class="quotidien" >Horoscope quotidien</button>
         <button id="getHoroscopeSemaineButton" class="hebdomadaire" >Horoscope hebdomadaire</button>
-</div>     
+</div>
+<div class="menu">
+  <nav>
+      <ul>
+          <li>Home</li>
+          <li>Horoscope</li>
+          <li>Blog</li>
+          <li>Contact</li>
+      </ul>
+  </nav> 
+  </div>
+<div class="conteneur">    
         <div id="horoscopeResult"></div>
-      </div>
+</div> 
+<div class="error">
+  <p>...</p>
+</div>     
     <script src="charity.js"></script>
-  </div> 
+  
 
 </body>
 </html>
